# napoleon

./: .gitignore  Cargo.toml  README.md  build-config.ini  build.gradle  requirements.txt  walls.json
.cargo/: config.toml
.config/: config.toml
examples/: timed_path.rs
scripts/: clone_and_build_repos.py  install_toolchain_mac.sh
src/: hybrid_grid.rs  lib.rs  pathfinding.rs
src/main/java/org/pwrup/napoleon/: HybridGrid.java  Main.java  Napoleon.java
src/main/java/org/pwrup/napoleon/bridge/: AStar.java  AStarPathfinder.java  HybridGrid.java  NativeLoader.java  NodePickStyle.java
src/main/java/org/pwrup/napoleon/trajectory/: TrajectoryBuilder.java
src/main/java/org/pwrup/napoleon/visualization/: PathfinderVisualization.java
src/main/python/position_predictor/: position_prediction.py
src/main/python/util/: hybrid_grid_struct.py
src/main/rust/: Cargo.toml  orientation.txt
src/main/rust/examples/: timed_path.rs
src/main/rust/src/: hybrid_grid.rs  hybrid_grid_updated.rs  jni_util_extended.rs  lib.rs  pathfinding.rs  time_structures.rs  trajectory_maker.rs
src/main/rust/src/hybrid_grid/: dynamic_objects.rs  math.rs
src/main/rust/src/hybrid_grid/dynamic_objects/: precalculated_dynamic_object.rs  time_point_dynamic_object.rs  trajectory_state.rs
src/main/rust/src/hybrid_grid_updated/: dynamic_objects.rs  math.rs
src/main/rust/src/pathfinding/: a_star.rs  rrt_star.rs
src/main/rust/src/pathfinding/a_star/: node.rs
src/pathfinding/: a_star.rs  rrt_star.rs
