[workspace]
members = ["src/main/rust"]

[package]
name = "napoleon"
version = "0.1.0"
edition = "2021"
authors = []
description = "A Rust project"

[dependencies]
napoleon-core = { path = "src/main/rust" }
nalgebra = "0.33.2"
splines = "4.4.2"
kiddo = "5.0.3"
jni = "0.21"
num-traits = "0.2.19"
jni-utils = "0.1.1"
j4rs = "0.22.0"

[lib]
name = "napoleon"
path = "src/main/rust/src/lib.rs"
crate-type = ["cdylib"]
